--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </table>
     <!-- Can do the above exercise by nested table also -->
   <hr size="3" noshade>
-    <h3>To contact me : <a href="...CONTACT.html"><em><strong>CONTACT</strong></em></a></h3>
+    <h3>To contact me : <a href="CONTACT.html"><em><strong>CONTACT</strong></em></a></h3>
 
 
 
