added little css

--- a/index.html
+++ b/index.html
@@ -4,13 +4,40 @@
 <head>
   <meta charset="utf-8">
   <title>🤡Suvansh's Personalised Webpage</title>
+  <style >
+
+body{
+  background-color: #9AD0EC;
+}
+hr{
+  border-style: dotted;
+  border-color: grey;
+  /* border-top-style: dotted;
+  /* border-bottom-style: none; */
+  border-right-style: none;
+  border-left-style: none;
+  border-bottom-style: none;
+  width: 5%;
+  border-width: 5px;
+  background-color: #9AD0EC;
+  border-width: 5px;
+
+}
+img{
+  height: 200px;
+}
+
+
+
+
+  </style>
 </head>
 
-<body>
+<body >
   <table>
     <thead>
       <tr>
-        <td><img src="images/profile.jpg" alt="Suvansh Mahajan's Image"></td>
+        <td><img src="C:\suvansh_files\complete wed course\Web Development\My personal page\images\profile.jpg" alt="Suvansh Mahajan's Image"></td>
         <td><h1>Suvansh Mahajan</h1>
         <p><em>Sophomore at <strong><a href="https://acad.iitr.ac.in/">IIT Roorkee</a></strong> undergoing Btech in Mechanical Engineering </em></p>
         <p>So, I am Suvansh Mahajan, currently pursuing B.tech in Mechanical Engineering at IIT Roorkee. I come from the land of five rivers, guessed it rightly-Punjab. I am currently learning web development and competitive programming. I am also a three
@@ -21,7 +48,7 @@
   </table>
 
 
-    <hr size="3" noshade>
+    <hr  noshade>
     <h3>Education</h3>
     <ul>
       <li>Bal Mata</li>
@@ -30,7 +57,7 @@
       <li>Little Flower Convent School</li>
       <li>Sri Guru Harkrishan International School</li>
     </ul>
-    <hr size="3" noshade>
+    <hr  noshade>
     <h3>My hobbies</h3>
 
     <ol>
@@ -38,7 +65,7 @@
       <li><strong><em><a href="https://codeforces.com/">competitive programming</a></em></strong></li>
       <li>Web development</li>
     </ol>
-    <hr size="3" noshade>
+    <hr  noshade>
     <h3>My Study Period</h3>
     <table border="1">
       <thead>
